--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     veniam.
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam ipsa minima error repudiandae, eaque aut
         dolores cumque eos reiciendis cum dignissimos a eius omnis quia molestias numquam eveniet sunt pariatur!</p>
+
+    <a href="#">Link</a>
 </body>
 
 </html>
